# posterz

./: .env  app.py  data.py  posterz.db  pyproject.toml  requirements.txt  settings.py
static/css/: style.css
static/js/: script.js
templates/: about.html  add_article.html  article.html  articles.html  dashboard.html  edit_article.html  footer.html  header.html  home.html  layout.html  login.html  messages.html  profile.html  register.html  user.html  user_articles.html  users.html
