[tool.poetry]
name = "posterz"
version = "0.1.0"
description = ""
authors = ["Azim Akmatov <azim.akmatov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
passlib = "^1.7"
wtforms = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
