[tool.poetry]
name = "posterz"
version = "0.1.0"
description = ""
authors = ["Azim Akmatov <azim.akmatov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
passlib = "^1.7"
wtforms = "^2.2"
python-dotenv = "^0.12.0"
flask-mail = "^0.9.1"
itsdangerous = "^1.1"
pillow = "9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
